--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
   <head>
     <title>Google</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet"/>
   </head>
 
